--- a/HuskyHoldEm/HuskyHoldEm.csproj
+++ b/HuskyHoldEm/HuskyHoldEm.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="DebugUtils.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Hand.cs" />
