Added interface IPlayer for use for the game logic and NetworkPlayer that extends IPlayer for the server. Game now has a GameLogic loop using ConsolePlayer to test game logic locally. Program.cs in HuskyHoldEm now can run a local game with some functionality (staying, raising, determining winner).

--- a/HuskyHoldEm/HuskyHoldEm.csproj
+++ b/HuskyHoldEm/HuskyHoldEm.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="ConsolePlayer.cs" />
     <Compile Include="DebugUtils.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Hand.cs" />
+    <Compile Include="IPlayer.cs" />
     <Compile Include="NetworkUtils.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
