--- a/HuskyHoldemServer/HuskyHoldemServer.csproj
+++ b/HuskyHoldemServer/HuskyHoldemServer.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NetworkPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
