--- a/HuskyHoldEm/HuskyHoldEm.csproj
+++ b/HuskyHoldEm/HuskyHoldEm.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="ClientPlayer.cs" />
     <Compile Include="ConsolePlayer.cs" />
     <Compile Include="DebugUtils.cs" />
     <Compile Include="Deck.cs" />
@@ -54,7 +55,6 @@
     <Compile Include="Hand.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="NetworkUtils.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Asserts.cs" />
