Moved all menu related strings and menu-showing functions to MenuUtils. (Refactored MenuArt to MenuUtils.)

--- a/HuskyHoldemClient/HuskyHoldemClient.csproj
+++ b/HuskyHoldemClient/HuskyHoldemClient.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
-    <Compile Include="MenuArt.cs" />
+    <Compile Include="MenuUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
